--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "mdbvue": "^6.7.2",
     "mint-ui": "^2.2.13",
     "packery": "^2.1.2",
     "vee-validate": "^3.4.5",
