--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
     "vue-slick-carousel": "^1.0.6",
+    "vue-upload-image": "^1.1.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
