--- a/backend/bin/src/main/resources/application.properties
+++ b/backend/bin/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:mysql://i4a404.p.ssafy.io:3306/udon?serverTimezone=UT
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
+server.port= 8000
+
 #mapper location settings
 
 #mybatis.config-location=classpath:mapper/mybatis-config.xml
