--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2",
     "vue-slick-carousel": "^1.0.6",
+    "vue-star-rating": "^1.7.0",
     "vue-upload-component": "^2.8.22",
     "vuex": "^3.4.0"
   },
