--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "vee-validate": "^3.4.5",
     "vue": "^2.6.12",
     "vue-burger-menu": "^2.0.5",
+    "vue-coverflow": "^2.2.0",
     "vue-glide": "^0.4.0",
     "vue-glide-js": "^1.3.14",
     "vue-js-toggle-button": "^1.3.3",
