--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,24 +26,24 @@
     "vue-js-toggle-button": "^1.3.3",
     "vue-packery-draggabilly-plugin": "^1.0.3",
     "vue-packery-plugin": "^1.4.8",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.5.1",
     "vue-select": "^3.11.2",
     "vue-slick-carousel": "^1.0.6",
     "vue-star-rating": "^1.7.0",
     "vue-upload-component": "^2.8.22",
-    "vuex": "^3.4.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.10",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
     "@vue/cli-plugin-vuex": "^4.5.11",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "less": "^4.1.0",
-    "less-loader": "^7.2.1",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
