badge백엔드 추가 및 리뷰수정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,6 +28,11 @@ spring.mail.password= d1n7qkqh12
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
+# application.properties
+#server.ssl.key-store=keystore.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=123456
+#server.ssl.key-alias=spring
 
 #cloud.aws.credentials.accessKey=
 #cloud.aws.credentials.secretKey=
