--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://i4a404.p.ssafy.io:3306/udon?allowMultiQueries=true&serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://i4a404.p.ssafy.io:3306/udon?allowMultiQueries=true&serverTimezone=Asia/Seoul&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
@@ -8,7 +8,7 @@ server.port=8000
 
 #mapper location settings
 
-#mybatis.config-location=classpath:mapper/mybatis-config.xml
+#mybatis.config-location=classpath:mapper/mybatis-config.xml   
 mybatis.config-location=classpath:/config/mybatis-config.xml
 mybatis.type-aliases-package=com.ssafy.udong.dto
 
