--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,7 +27,14 @@ spring.mail.username= youngug159@gmail.com
 spring.mail.password= d1n7qkqh12
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.auth= true
-spring.mail.properties.mail.smtp.starttls.enable= true
+spring.mail.properties.mail.smtp.starttls.enable= true // tls
+
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
+
 # application.properties
 #server.ssl.key-store=keystore.p12
 #server.ssl.key-store-type=PKCS12
