--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,8 +23,8 @@ file.upload-dir=./uploads
 spring.mvc.converters.preferred-json-mapper=gson
 
 spring.mail.host= smtp.gmail.com
-spring.mail.username= youngug159@gmail.com
-spring.mail.password= dyddnr!2asz
+#spring.mail.username= <GMAIL Email>
+#spring.mail.password= <Password>
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.auth= true
 
